5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1601_2425.log
== TEST (2019-03-28 22:50:23) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l
print(round(consumo, 3)) print("km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)) print("km/l")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:58:18) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l
print(round(consumo, 3)) print(km/l)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)) print(km/l)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:58:33) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l
print(round(consumo, 3)) print(km/l)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)) print(km/l)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:59:39) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
print(round(consumo, 3)) 
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:01:15) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
grandeza = km/l
print(round(consumo, 3)) print(grandeza)
-- ERROR:
File "XXXX", line 5
    print(round(consumo, 3)) print(grandeza)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:01:27) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
grandeza = km/l
print(round(consumo, 3)) 
print(grandeza)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    grandeza = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:01:34) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
grandeza = km/l
print(round(consumo, 3)) 
print(grandeza)
-- EXECUTION TIME:
0.126499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 4, in <module>
    grandeza = km/l
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:01:40) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
grandeza = km/l
print(round(consumo, 3)) 
print(grandeza)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    grandeza = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:03:01) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:03:38) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3)) print(texto)

-- EXECUTION TIME:
0.142445
-- ERROR:
  File "/home/codebench/codes/1601/2425/main.py", line 5
    print(round(consumo, 3)) print(texto)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:03:42) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3)) print(texto)

-- ERROR:
File "XXXX", line 5
    print(round(consumo, 3)) print(texto)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:04:18) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3), texto) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:04:34) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3), texto) 

-- EXECUTION TIME:
0.117751
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 4, in <module>
    texto = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:06:53) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3)
print(texto)

-- ERROR:
File "XXXX", line 6
    print(texto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:08:02) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3)
print(texto)

-- ERROR:
File "XXXX", line 6
    print(texto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:21:10) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = input("km/l")
print(round(consumo, 3)
print(texto)

-- ERROR:
File "XXXX", line 6
    print(texto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:21:30) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = km/l
print(round(consumo, 3)
print(texto)

-- ERROR:
File "XXXX", line 6
    print(texto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:22:19) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = km/l
print(round(consumo, 3), texto)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:22:25) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = km/l
print(round(consumo, 3), texto)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    texto = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:22:58) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = "km/l"
print(round(consumo, 3), texto)


-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:23:11) 
-- CODE:
d = float(input("distancia percorrida"))
l = float(input("combustivel gasto"))
consumo = d/l 
texto = "km/l"
print(round(consumo, 3), texto)


-- EXECUTION TIME:
0.13647
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
